; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_hex_long_text.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_hex_long_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value_buffer = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"%llx\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.value_buffer*, i64)* @value_buffer_output_hex_long_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @value_buffer_output_hex_long_text(%struct.value_buffer* %0, i64 %1) #0 {
  %3 = alloca %struct.value_buffer*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.value_buffer* %0, %struct.value_buffer** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %7 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @sprintf(i32 %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %12 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %17 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, %15
  store i32 %19, i32* %17, align 4
  ret void
}

declare dso_local i32 @sprintf(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
